fixed various bugs with movement. Get monsters to rest when damaged offscreen. Fix damage should show on top of enemies. Fixed enemies wouldn't appear sometimes after reviving.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -366,6 +366,10 @@
     left: 480px;
     top: 300px;
 }
+.currentArea .areaOverlay {
+    z-index: 2;
+    position: relative;
+}
 
 .currentArea img {
     position: absolute;
